; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy-binlog.c_write_index.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy-binlog.c_write_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@last = common dso_local global i32 0, align 4
@cur = common dso_local global i32 0, align 4
@ifd = common dso_local global i32 0, align 4
@SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_index() #0 {
  %1 = load i32, i32* @last, align 4
  %2 = load i32, i32* @cur, align 4
  %3 = call i64 @memcmp(i32 %1, i32 %2, i32 20)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %18

5:                                                ; preds = %0
  %6 = load i32, i32* @ifd, align 4
  %7 = load i32, i32* @SEEK_SET, align 4
  %8 = call i32 @lseek(i32 %6, i32 0, i32 %7)
  %9 = load i32, i32* @ifd, align 4
  %10 = load i32, i32* @cur, align 4
  %11 = call i32 @write(i32 %9, i32 %10, i32 20)
  %12 = icmp eq i32 %11, 20
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32, i32* @last, align 4
  %16 = load i32, i32* @cur, align 4
  %17 = call i32 @memcpy(i32 %15, i32 %16, i32 20)
  br label %18

18:                                               ; preds = %5, %0
  ret void
}

declare dso_local i64 @memcmp(i32, i32, i32) #1

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @write(i32, i32, i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
